docs/src/components/Steps/styles.module.css
/* src/components/Steps.module.css */
.stepsContainer {
    position: relative;
    padding-left: 45px;
    counter-reset: step-counter;
  }
  
  .stepsContainer > ol {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
  
  .stepsContainer > ol > li {
    position: relative;
    margin-bottom: 20px;
    padding-bottom: 10px;
  }
  
  .stepsContainer > ol > li::before {
    content: counter(step-counter);
    counter-increment: step-counter;
    position: absolute;
    left: -45px;
    top: -5px;
    width: 30px;
    height: 30px;
    background-color: #fff;
    border: 2px solid #e0e0e0;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
    z-index: 1;
  }
  
  .stepsContainer > ol > li::after {
    content: '';
    position: absolute;
    top: 15px;
    bottom: -15px;
    left: -32px;
    width: 2px;
    background-color: #e0e0e0;
  }
  
  .stepsContainer > ol > li:last-child::after {
    display: none;
  }

